﻿					eXtreme-Fusion V Beta 5 2012.06.23

- zrezygnowano z $_SERVER['PATH_INFO'] na rzecz $_SERVER['REQUEST_URI']
  ze względu na problemy na serwerach nginx
- dodano instrukcje warunkowe do .htaccess, przez co plik ten jest używany
  nawet wtedy, gdy na serwerze nie ma załadowanego modułu Rewrite
- usunięto problem z przenoszeniem strony na nowy serwer, na którym nie ma
  modułu Rewrite, przez co pojawiał się błąd 500
- wprowadzono poprawki, dzięki którym Przyjazne Linki mogą działać na cba.pl

- uproszczono instalacje: mało używane elementy schowano jako Zaawansowane
- dodano checkboxy umożliwiające poinformowanie instalatora,
  że modRewrite jest dostępny; analogicznie co do PATH_INFO
- edycja ustawień routera (możliwość wyboru rozszerzenia dla adresów URL)

- nowy wygląd podstrony Profil użytkownika

- wyeliminowano błąd z niewyświetlaniem się newsów osobom niezalogowanym
- wprowadzono poprawkę do czyszczenia cache podczas edycji newsa lub kategorii

- ZMIANA WYMAGANEJ WERSJI PHP Z 5.2.17 NA 5.2.2 ze względu na to, że znaczące
  firmy hostingowe, np. home.pl, wprowadzają aktualizację interpretera
  do wersji PHP 5.3 ustawiając ją jako domyślną, więc nie ma sensu
  testować systemu na coraz mniej używanym PHP < 5.2.2
- przepisano instalator na system szablonów OPT